--- a/app/templates/ocr.html
+++ b/app/templates/ocr.html
@@ -49,7 +49,7 @@ $def with(post)
 <script type="text/javascript">
     //变量初始化，存储需要请求的数据
     imgJson = {
-        "imgString": "",
+        "img_string": "",
         "num": 0,
         "url": "",
         "result": "",
